Add Canvas to Window

--- a/Player/MainWindow.xaml
+++ b/Player/MainWindow.xaml
@@ -2,11 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="EnACT Caption Player" Height="600" Width="800">
-    <Menu HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="792">
-        <MenuItem Header="File">
-            <MenuItem Header="Open Video"/>
-            <MenuItem Header="Close Video"/>
-            <MenuItem Header="Exit EnACT Player"/>
-        </MenuItem>
-    </Menu>
+    <DockPanel HorizontalAlignment="Left" Height="570" LastChildFill="True" VerticalAlignment="Top" Width="792">
+        <Menu HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="792" DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="Open Video"/>
+                <MenuItem Header="Close Video"/>
+                <MenuItem Header="Exit EnACT Player"/>
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="Help"/>
+                <MenuItem Header="About"/>
+            </MenuItem>
+        </Menu>
+        <Canvas VerticalAlignment="Top">
+            <MediaElement VerticalAlignment="Top"/>
+        </Canvas>
+    </DockPanel>
 </Window>
