--- a/Player/MainWindow.xaml
+++ b/Player/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="Player.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Player" x:Class="Player.MainWindow"
         Title="EnACT Caption Player" Height="600" Width="800">
     <DockPanel HorizontalAlignment="Left" Height="570" LastChildFill="True" VerticalAlignment="Top" Width="792">
         <Menu HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="792" DockPanel.Dock="Top">
@@ -14,8 +15,6 @@
                 <MenuItem Header="About"/>
             </MenuItem>
         </Menu>
-        <Canvas VerticalAlignment="Top">
-            <MediaElement VerticalAlignment="Top"/>
-        </Canvas>
+        <local:MediaPlayer DockPanel.Dock="Top"/>
     </DockPanel>
 </Window>
