--- a/Player/MainWindow.xaml
+++ b/Player/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Player" x:Class="Player.MainWindow"
-        Title="EnACT Caption Player" Height="600" Width="800">
-    <DockPanel HorizontalAlignment="Left" Height="570" LastChildFill="True" VerticalAlignment="Top" Width="792">
-        <Menu HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Top" Width="792" DockPanel.Dock="Top">
+        Title="EnACT Caption Player" Height="600" Width="800" MinWidth="800" MinHeight="600">
+    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
+        <Menu HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Top" DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="Open Video"/>
                 <MenuItem Header="Close Video"/>
@@ -15,6 +15,18 @@
                 <MenuItem Header="About"/>
             </MenuItem>
         </Menu>
-        <local:MediaPlayer DockPanel.Dock="Top"/>
+        <DockPanel  LastChildFill="False" DockPanel.Dock="Bottom" HorizontalAlignment="Stretch">
+            <Slider VerticalAlignment="Top" DockPanel.Dock="Top" Width="700"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom">
+                <Button Content="Rewind" VerticalAlignment="Top" Width="75"/>
+                <Button Content="Pause" VerticalAlignment="Top" Width="75"/>
+                <Button Content="Play" VerticalAlignment="Top" Width="75"/>
+                <Button Content="Stop" VerticalAlignment="Top" Width="75"/>
+                <Button Content="Forward" VerticalAlignment="Top" Width="75"/>
+                <CheckBox Content="Show Captions" IsChecked="True"/>
+                <CheckBox Content="Hide Controls"/>
+            </StackPanel>
+        </DockPanel>
+        <local:MediaPlayer DockPanel.Dock="Top" Background="Black"/>
     </DockPanel>
 </Window>
