Add OpenFile Logic

--- a/Player/MainWindow.xaml
+++ b/Player/MainWindow.xaml
@@ -6,7 +6,7 @@
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
         <Menu HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Top" DockPanel.Dock="Top">
             <MenuItem Header="File">
-                <MenuItem x:Name="MenuItemOpenVideo" Header="Open Video" />
+                <MenuItem x:Name="MenuItemOpenVideo" Header="Open Video" Click="MenuItemOpenVideo_OnClick" />
                 <MenuItem x:Name="MenuItemCloseVideo" Header="Close Video"/>
                 <MenuItem x:Name="MenuItemExit" Header="Exit EnACT Player"/>
             </MenuItem>
@@ -28,6 +28,6 @@
             </StackPanel>
         </DockPanel>
         <!--Make Media Player the last Element so that it fills the remaining space-->
-        <local:MediaPlayer DockPanel.Dock="Top" Background="Black"/>
+        <local:MediaPlayer x:Name="MediaPlayer" DockPanel.Dock="Top" Background="Black"/>
     </DockPanel>
 </Window>
