--- a/Player/MediaPlayer.xaml
+++ b/Player/MediaPlayer.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300">
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
         <MediaElement x:Name="Media" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
