--- a/Player/Views/MainWindow.xaml
+++ b/Player/Views/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Player" x:Class="Player.MainWindow"
+        xmlns:local="clr-namespace:Player" x:Class="Player.Views.MainWindow"
         Title="EnACT Caption Player" Height="600" Width="800" MinWidth="800" MinHeight="600">
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
         <Menu HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Top" DockPanel.Dock="Top">
@@ -19,11 +19,11 @@
             <Slider VerticalAlignment="Top" DockPanel.Dock="Top" Width="700"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom">
                 <Button x:Name="ButtonRewind" Content="Rewind" VerticalAlignment="Top" Width="75"
-                        />
+                    />
                 <Button x:Name="ButtonPause" Content="Pause" VerticalAlignment="Top" Width="75"
                         />
                 <Button x:Name="ButtonPlay" Content="Play" VerticalAlignment="Top" Width="75"
-                        />
+                    Command="{Binding PlayCommand}" />
                 <Button x:Name="ButtonStop" Content="Stop" VerticalAlignment="Top" Width="75"
                         />
                 <Button x:Name="ButtonForward" Content="Forward" VerticalAlignment="Top" Width="75"
