Add Play/Pause/Stop Functionality

--- a/Player/Views/PlayerWindow.xaml
+++ b/Player/Views/PlayerWindow.xaml
@@ -21,11 +21,11 @@
                 <Button x:Name="ButtonRewind" Content="Rewind" VerticalAlignment="Top" Width="75"
                     />
                 <Button x:Name="ButtonPause" Content="Pause" VerticalAlignment="Top" Width="75"
-                        />
+                    Command="{Binding PauseCommand}" />
                 <Button x:Name="ButtonPlay" Content="Play" VerticalAlignment="Top" Width="75"
                     Command="{Binding PlayCommand}" />
                 <Button x:Name="ButtonStop" Content="Stop" VerticalAlignment="Top" Width="75"
-                        />
+                    Command="{Binding StopCommand}" />
                 <Button x:Name="ButtonForward" Content="Forward" VerticalAlignment="Top" Width="75"
                         />
                 <CheckBox x:Name="CheckBoxShowCaptions" Content="Show Captions" IsChecked="True"/>
@@ -33,6 +33,6 @@
             </StackPanel>
         </DockPanel>
         <!--Make Media Player the last Element so that it fills the remaining space-->
-        <local:MediaPlayer x:Name="MediaPlayer" DockPanel.Dock="Top" Background="Black"/>
+        <local:MediaPlayer x:Name="Player" DockPanel.Dock="Top" Background="Black"/>
     </DockPanel>
 </Window>
