--- a/Player/MediaPlayer.xaml
+++ b/Player/MediaPlayer.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-        <MediaElement x:Name="Media" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <MediaElement x:Name="Media" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+            />
     </Grid>
 </UserControl>
