Add Source Binding to Player
Changes Player from a MediaPlayer to a MediaElement.

--- a/Player/Views/PlayerWindow.xaml
+++ b/Player/Views/PlayerWindow.xaml
@@ -33,6 +33,6 @@
             </StackPanel>
         </DockPanel>
         <!--Make Media Player the last Element so that it fills the remaining space-->
-        <MediaElement x:Name="Player" DockPanel.Dock="Top" />
+        <MediaElement x:Name="Player" DockPanel.Dock="Top" Source="{Binding VideoUri}" />
     </DockPanel>
 </Window>
