--- a/Player/Controls/MediaPlayer.xaml
+++ b/Player/Controls/MediaPlayer.xaml
@@ -1,12 +1,28 @@
-﻿<UserControl x:Class="Player.MediaPlayer"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-        <MediaElement x:Name="Media" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
-            />
+﻿<UserControl
+    xmlns:Controls="clr-namespace:Player.Controls"
+    x:Class="Player.Controls.MediaPlayer"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="300">
+    <UserControl.Resources>
+        <Storyboard
+            x:Key="CaptionStoryboard"
+            x:Name="CaptionStoryboard">
+            <MediaTimeline
+                Source="{Binding VideoUri}"
+                Storyboard.TargetName="Media" />
+        </Storyboard>
+    </UserControl.Resources>
+    <Grid
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch">
+        <Controls:StatefulMediaElement
+            x:Name="Media"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch" />
     </Grid>
 </UserControl>
