Add TextBlock Addition to Player

--- a/Player/Controls/MediaPlayer.xaml
+++ b/Player/Controls/MediaPlayer.xaml
@@ -18,6 +18,7 @@
         </Storyboard>
     </UserControl.Resources>
     <Grid
+        x:Name="CaptionGrid"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch">
         <Controls:StatefulMediaElement
