Add Text Alignment Experiments

--- a/Player/Controls/MediaPlayer.xaml
+++ b/Player/Controls/MediaPlayer.xaml
@@ -21,10 +21,39 @@
         x:Name="CaptionGrid"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
         <Controls:StatefulMediaElement
             x:Name="Media"
             LoadedBehavior="Manual"
             HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch" />
+            VerticalAlignment="Stretch" 
+            Grid.RowSpan="3"
+            Grid.ColumnSpan="3"/>
+        <TextBlock
+            HorizontalAlignment="Left"
+            Grid.Row="2"
+            FontSize="20"
+            TextWrapping="Wrap"
+            Text="Is it possible to have a control that exists inside"
+            VerticalAlignment="Center"
+            Grid.ColumnSpan="3"/>
+        <TextBlock
+            HorizontalAlignment="Center"
+            Grid.Row="1"
+            FontSize="20"
+            TextWrapping="Wrap"
+            Text="Is it possible to have a control that exists inside"
+            VerticalAlignment="Center"
+            Grid.ColumnSpan="2
+            " />
     </Grid>
 </UserControl>
