Add ZIndex Expiriments

--- a/Player/Controls/MediaPlayer.xaml
+++ b/Player/Controls/MediaPlayer.xaml
@@ -37,15 +37,8 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch" 
             Grid.RowSpan="3"
-            Grid.ColumnSpan="3"/>
-        <TextBlock
-            HorizontalAlignment="Left"
-            Grid.Row="2"
-            FontSize="20"
-            TextWrapping="Wrap"
-            Text="Is it possible to have a control that exists inside"
-            VerticalAlignment="Center"
-            Grid.ColumnSpan="3"/>
+            Grid.ColumnSpan="3"
+            Grid.ZIndex="0"/>
         <TextBlock
             HorizontalAlignment="Center"
             Grid.Row="1"
@@ -53,7 +46,7 @@
             TextWrapping="Wrap"
             Text="Is it possible to have a control that exists inside"
             VerticalAlignment="Center"
-            Grid.ColumnSpan="2
-            " />
+            Grid.ColumnSpan="3" 
+            Grid.Column="0" />
     </Grid>
 </UserControl>
