Add default volume of 0

--- a/Player/Controls/MediaPlayer.xaml
+++ b/Player/Controls/MediaPlayer.xaml
@@ -35,7 +35,8 @@
             x:Name="Media"
             LoadedBehavior="Manual"
             HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch" 
+            VerticalAlignment="Stretch"
+            Volume="0"
             Grid.RowSpan="3"
             Grid.ColumnSpan="3"
             Grid.ZIndex="0"/>
