--- a/Player/Controls/MediaControl.xaml
+++ b/Player/Controls/MediaControl.xaml
@@ -1,6 +1,6 @@
 ﻿<UserControl
     xmlns:Controls="clr-namespace:Player.Controls"
-    x:Class="Player.Controls.MediaPlayer"
+    x:Class="Player.Controls.MediaControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
